End stages Ch.6

--- a/_posts/thesis_chapters/2025-3-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-3-6-Gdps.md
@@ -505,7 +505,7 @@ In the vignette extract below, home-based knowledge of GDP mechanics is utilised
 INSERT DAN AND TOBY EXTRACT HERE.
 
 
-later in the same session (see V7.12-16), Toby uses the code based tilemap tool to design a maze game instead of a platformer game drawing on existing knowledge of tools and home knowledge of the target game genre to rapidly make revisions without extensive planning. This use of GDPs to allow the spacial exploration of design in a visual and intuitive way suits being mapped onto paper, or onto graphical software which allows for a similarly rapid prototyping. By way of contrast, other pairs take advantage of paper prototyping. For example, Susanna(p) notices the child's difficulty in using cursor and delete/backspace keys to edit a matrix allowing level design. The parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly. Interview data with Mark and Ed uncovers complexities in the use of both digital and paper prototyping of related to GDPs explored in more detail in Appendix.tech.prototyping. WHY IMPORTANT?
+Later in the same session (see V7.12-16), Toby uses the code based tilemap tool to design a maze game instead of a platformer game drawing on existing knowledge of tools and home knowledge of the target game genre to rapidly make revisions without extensive planning. This use of GDPs to allow the spacial exploration of design in a visual and intuitive way suits being mapped onto paper, or onto graphical software which allows for a similarly rapid prototyping. By way of contrast, other pairs take advantage of paper prototyping. For example, Susanna(p) notices the child's difficulty in using cursor and delete/backspace keys to edit a matrix allowing level design. The parent provides a book with grid paper to allow the child to replicate the matrix. The parent is then able to transcribe the design to the code example while engaging the child by checking she has interpreted the design correctly. Interview data with Mark and Ed uncovers complexities in the use of both digital and paper prototyping of related to GDPs explored in more detail in Appendix.tech.prototyping. WHY IMPORTANT?
 
 <!-- IS SOME SYNTHESIS NEEDED TO END THIS SECTION? -->
 
@@ -559,11 +559,7 @@ While the context of the participants as families involved in home education mak
 Thus, in response to the creative support that parents and siblings provide, facilitators should design learning environments to facilitate these possibilities. The work of Roque provides guidance for helpers in the process to support parents to value and feel confident in these roles [@roque_im_2016] in a way which mirrors the use of helpers in this phase of my study (see Chapter 4).
 
 
-
-
-
-
-The variety of repertoires of helping practice depends in part on the different funds of knowledge the parent has access to. The helping pattern of researching and accessing technical documentation is not available to all pairs, due to the level of skill and experience involved
+The variety of repertoires of helping practice depends in part on the different funds of knowledge the parent has access to. The helping pattern of researching and accessing technical documentation is not available to all pairs, due to the level of skill and experience involved.
 
 Toby and Dan's pair process is more guided and focused than many other participants and includes accessing professional documentation and exploration of computational thinking concepts.
 
@@ -631,23 +627,22 @@ In the extract of Vignette 2, Tehillah (c) pursues a quirky design goal during h
 
 |**Dialogue**|**Activity**|
 |:----|:----|
-| Susanna Are you putting one in your third level as well?                                                                                |                                                                                                             |
+| Susanna Are you putting one in your third level as well?                                                                                | Susanna is referring to the putting in news "keys" into the level design which is possible after implementing the Key and Door pattern in code.      |
 | Tehillah: Yes and then I’m going to make more levels                                                                                    | Tehillah Smiles at Susanna and then looks away for a short while                                            |
-| Tehillah: You do this bit                                                                                                               |                                                                                                             |
-| Tehillah: And then delete those H’s. And in there.                                                                                      |                                                                                                             |
-| Susanna No. No.                                                                                                                         |                                                                                                             |
-| Tehillah: Then, let me do it.                                                                                                           | (off screen) Tehillah takes over the keyboard                                                               |
-| Susanna It’s no fun having a game with any hazards to avoid.                                                                            |                                                                                                             |
-| Tehillah: It is for me!<br>How do you go that way back?<br>So sorry for deleting…<br>They just…                                         | (on screen) Tehillah deletes hazards in Level 3 of game                                                     |
-| Back Back Back<br>O O O.<br>Back O (giggles)                                                                                            | (laughs) replaces another)<br>(on screen) Tehillah adds three coins to Level 3 by inserting o in the matrix |
-| Susanna: Goodness me what was the point of designing our car with fumes if we’re not going to use it?<br>Tehillah: I don’t know (sighs) |                                                                                                             |
+| Tehillah: You do this bit  |    |
+| Tehillah: And then delete those H’s. And in there.  | The H's refer to hazards in the level design matrix.  |
+| Susanna No! No! <br>  Tehillah: Then, let me do it.      | (off screen) Tehillah takes over the keyboard.    |
+| Susanna It’s no fun having a game with any hazards to avoid.<br> Tehillah: It is for me!   |     |
+| Tehillah:How do you go that way back?<br>So sorry for deleting…<br>They just…                                         | Tehillah indicates that she wants to delete characters before teh cursor. Then on screen Tehillah deletes all hazards in Level 3 of the game     |
+| Back Back Back<br>O O O.<br>Back O    | Tehillah laughs. <br>On screen Tehillah adds three coins to Level 3 by inserting o characters in the level design matrix |
+| Susanna: Goodness me what was the point of designing our car with fumes if we’re not going to use it?<br>Tehillah: I don’t know.  |  Susanna's tone of voice indicates frustration. After speaking Tehillah sighs deeply.    |
 
 Susanna(p)'s alarm at the child's deletion of all elements of hazard shows she has a sense of game balance to ensure a sense of challenge for the imagined player. "It's no fun having a game without any hazards to avoid." However, Tehillah (c) seems determined to remove all hazards. *"It is for me!"* she counters. My understanding is that she is may be aware of the implications for game balance but takes pleasure in this destruction of the key challenge of the game as an act of disruptive play. A later interaction with a peer shows that Tehillah (child) is indeed imagining the experience of the audience. *"I like making it frustrating. That other people find it frustrating!"* Tehillah (child) notes the persistence of a student helper who pushes past her frustration to complete the game. Her remark, *"If people tried hard they would get to my level,"* shows her awareness that not all players will persist in the same way to reach her final level, which has only rewards and no hazards. This being a *"secret, special"* experience, which plays against the norms of platform game design, is thus intended to provoke player surprise.
 
 In contrast other participants created extremely challenging or impossible game levels that frustrated other players.
+DEVELOP THIS A BIT MORE WITH QUICK EXAMPLES.
 
-
-This examples serve to highlight two dimensions of the use of GDP concepts to facilitate the process of designing for others. The first is the influence of making in a cultural setting where regular playtesting by peers occurs on the making process. The second is through either direct advice by pair partners and peers in playtesting to imagining others' user experience, or indirectly by gameplay feedback or suggesting alterations to GDP implementations. This research is in line with the interpretation within computer supported collaborative learning of the value of the  of tangible, public digital products as both a motivating and focusing factor in computer-supported collaborative learning (CSCL) [@xambo_experience_2017; @fields_programmers_2015]. The results here are valuable as a contribution help address a deficit of results in the use of CSCL to support computer programming [@silva_computer-supported_2020].
+This example serve to highlight two dimensions of the use of GDP concepts to facilitate the process of designing for others. The first is the influence of making in a cultural setting where regular playtesting by peers occurs on the making process. The second is through either direct advice by pair partners and peers in playtesting to imagining others' user experience, or indirectly by gameplay feedback or suggesting alterations to GDP implementations. This research is in line with the interpretation within computer supported collaborative learning of the value of the  of tangible, public digital products as both a motivating and focusing factor in computer-supported collaborative learning (CSCL) [@xambo_experience_2017; @fields_programmers_2015]. The results here are valuable as a contribution help address a deficit of results in the use of CSCL to support computer programming [@silva_computer-supported_2020].
 
 <!-- While Susanna(p) imagine a user experience and make a playable game conforming to her perception of norms, Tehillah's(c) playful imagining of the experience of a more immediate audience of fellow game makers and supporting students appears to provide a tangible motivation with rapid rewards.
 wider goal of making an engaging game if it interferes with the engagement of the test users. -->
@@ -700,15 +695,7 @@ Turning to the area game mechanics, In see V1.b Bertie(c) comments on Toby(c)'s 
 
 The previous examples have outlined varied was that  participants used GDPs in incorporating elements of home funds of knowledge and interest into their games. I observed that families and individuals those less intrinsically interested in the gaming often engaged with the aesthetics elements of the graphical or audio design or the cast of characters the narrative of the game.
 
-
-
-
-<!-- The MDA framework has been used to  can support novice game makers to explore game elements (moveable game jam). -->
-
-
-In summary, GDP concepts allow participants to share and explore funds of knowledge and interest [@fasso_identity_2020; @esteban-guitart_funds_2014] related to gaming culture [@ito_hanging_2010; @livingstone_digital_2018] in the emerging learning community. While existing work on computational design patterns by Repenning et al. [-@repenning_scalable_2015] addresses the motivational value of working with known games types, and the patterns as a way of scaffolding the process of programming, it does not address any aspect of choice when of drawing on FoK when creating games.
-
-In contrast, the different types of GDPs available to participants to choose from in the menu of GDP documentation and code snippets allowed for a choice in participant making paths, enabling alignment with home interests. As a contribution this area of research,  I propose that the diversity and subdivision of a menu of GDPs aligned with the MDA framework can help participants to elect to follow varied learning pathways based on their home interests in a way which aligns with characteristics of the inclusive pedagogy [@sanger_inclusive_2020]. Specifically, this is achieved by providing scaffolding and resources which allow exploration of concepts which providing multiple means of engagement with the learning process [@capp_effectiveness_2017].
+In summary, GDP concepts allow participants to share and explore funds of knowledge and interest [@fasso_identity_2020; @esteban-guitart_funds_2014] related to gaming culture [@ito_hanging_2010; @livingstone_digital_2018] in the emerging learning community. While existing work on computational design patterns by Repenning et al. [-@repenning_scalable_2015] addresses the motivational value of working with known games types, and the patterns as a way of scaffolding the process of programming, it does not address any aspect of choice when of drawing on FoK when creating games. In contrast, the different types of GDPs available to participants to choose from in the menu of GDP documentation and code snippets allowed for a choice in participant making paths, enabling alignment with home interests. As a contribution this area of research,  I propose that the diversity and subdivision of a menu of GDPs aligned with the MDA framework can help participants to elect to follow varied learning pathways based on their home interests in a way which aligns with characteristics of the inclusive pedagogy [@sanger_inclusive_2020]. Specifically, this is achieved by providing scaffolding and resources which allow exploration of concepts which providing multiple means of engagement with the learning process [@capp_effectiveness_2017].
 
 
 <!-- A wider exploration of use of FOK in the programme related to art and narrative is explored in chapting behaviourser six.
@@ -760,15 +747,14 @@ The implementation of popular or novel GDPs by participant pairs or individuals 
 
 In Vignette 1b, Toby's work adding 21 levels to his game is noticed by Bertie who then asks Toby, _"Can you show me how you add more levels onto yours?"_ The full exchange shows an example of the propagation of GDPs emerging from the process of community playtesting through a direct request. It is possible that Bertie's request to Toby is prompted by Bertie noticing Toby helping Nasrin and Harper add levels to their games. Toby's emerging role as a specialist that the community can draw on for practical help, and similar examples (see also that of Nasrin in Vignette 5), were welcomed by me as a way to reduce dependence on myself as a facilitator, or to provide an alternative to the instruction-based support documents.
 
-
 Turning to evolution of patterns, the concept of a safe zone in the game of Pearl and Clive arrived as a direct result of adding many _moving enemies_ in a way that it became essential for players to quickly identify and use 'safe zones' where enemies did not reach. This novel  concept, became used as lingua franca in the playtesting of that game and that of others with moving enemies. Once concepts like safe zone or bonus level enters the linguistic and coding repertoire of this community of game makers, either from documentation, home gaming knowledge or genuine innovation,  it became available for propagation for take up by other participants.
 
 
 The data shows other examples of organic emergence of novel GDPs and related design concepts  beyond those offered in the menu of supporting documentation. Tehillah's concept of a kind of bonus level that eschews challenge and offers only rewards (see Vignette 2) emerged through playful experimentation. While this idea exists in popular games, it was experimental and novel for the child.
 
+DEVELOP THIS OR MOVE
 In contrast other participants created extremely challenging or impossible game levels that frustrated other players.
 
-DEVELOP THIS OR MOVE
 They seem to take pleasure from ignoring concepts of what should be done to maintain game balance and from the sense of shock from their current audience her parent. Going against this convention is a type of playful destruction in this context. The process mirrors play theory concept of playing against the game or dark play [@sutton-smith_ambiguity_2001].
 
 The preferences shown by some for peer learning and convention breaking became a part of the emerging culture of the game making sessions.
@@ -777,54 +763,38 @@ The preferences shown by some for peer learning and convention breaking became a
 
 The term idioculture [@cole_design-based_2016], a local, non-geographical, non-demographic community where culture emerges via valued behaviours [@lecusay_telementoring_2015], can be applied to the role of GDPs as component parts in the emergence of a community culture.
 
-Aspects of idioculture stemming from GDP use have already been described above, in aspects of peer learning, use of home interests, etc.
+To help foster an inclusive environment I led by warm up games at the start of sessions in early sessions of phases one two ad there. From phase two onwards I encourages playtesting time in the second half or each session. This playtesting time was open in scope allowed for natural play to emerge. While hard to quantify, phase two and three in particular can be characterised as having a playful and social atmosphere.
 
-**evolving culture of playfulness and social interaction**  
-To creating a relaxed environment I led by warm up games at the start of sessions in P1 regularly and at the start of P2. Regular playtesting which was open in scope allowed for natural play to emerge. For many younger participants, the game making time involved may playful interactions and was an important, perhaps even primary, motivation to attend.
-Playtesting was also used as a social time for adults, conversations about x and y.
-
+Other characteristics and norms of the emerging idioculture stemming which stem from the GDP use have already been described above. Elements of peer learning, incorporation of home interests and behaviours, concepts of appropriate challenge. These examples are emerging process where cultural concepts are mutually constituted by different actors involved in the game making activity system. They emerge not solely due to their embedded mediational potential within GDPs use, but as products of an expanded shared object of activity.
 <!-- The playful elements of the revised process with greater playtesting time helped remove system tensions and moreover introduced system congruencies. -->
 
-
-
-LINK
-This section is short as this aspect is explored in more depth in Chapter 7.
-These examples are emerging process where cultural concepts are mutually constituted by different actors involved in the game making activity system. While the concepts of hardness and challenge that emerge and not concrete examples of GDPs used as mediation, rather an examples of blending of users FoK about gaming norms meeting feedback processes. The next chapter explores similar concepts of blending of practices to create new aspects of the emerging idioculture.
 
 <!-- they are the results of changed GDPs. The next chapter explores similar data on the use of GDP related concepts by participants and the resultant potential impact on participant agency. -->
 
 
 ## Discussion
 
-This discussion section discusses the complexity of the exanded object of activity and the diverse mediational uses of GDPs using a 3GAT framework. Bearing in mind the challenge of communicating the diverse motivations and forms of activity involved, it returns to concepts of proximal flow and computational fluency present in CGD&P research to begin an analysis of how this research can contribute to understandings in this domain.
+This discussion section discusses the complexity of the expanded object of activity and the diverse mediational uses of GDPs using a activity theory as a framework. It summarises the different uses of GDPs in a table and notes the limitations of 3GAT to represent such diversity of mediational strategies.  
+
+To address the challenge of communicating the diverse motivations and forms of activity involved, it returns to concepts of proximal flow and computational fluency present in CGD&P research.
 
 
 ### Addressing the use of GDPs in relation to theoretical understandings of processes of mediation and expanded objects of activity -
 
-This chapter has also addressed the complexity of activity by focusing on the germ cell concept of GDPs used in a variety of ways, a summary of which has been represented in table form at the start of this chapter.
-
-As such a fuller table summarises interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts. The right column lists example behaviours and notes vignettes or appendices where the behaviour can be found in situ with more detailed analysis.
-
-Chapter 5, via a design narrative of the pedagogical design used, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed.
+Chapter 5, via a design narrative of the pedagogical design used, exposed tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed. This chapter has developed analysis of activity by focusing on the germ cell concept of GDPs used in a variety of ways, a summary of which has been represented in table form at the start of this chapter. A fuller table now summarises this chapter's interpretation of the diverse roles of GDPs in the game-making activity using CHAT concepts. GDPs are used in diverse ways by participants, peers and facilitators, as principle or supporting parts of mediational strategies including as as a lingua franca, as a motivational element, or as a way of structuring the learning experience and supporting resources. The right column lists example behaviours and notes vignettes or appendices where the behaviour can be found in situ with more detailed analysis.
 
 
 INSERT TABLE HERE.
 
-The examples in this table show GDPs are used in diverse ways by participants, peers and facilitators, as principle or supporting parts of mediational strategies including as as a lingua franca, as a motivational element, or as a way of structuring the learning experience and supporting resources.   
 
-The findings expose complex activity which presents challenges in terms of graphical representation using 3GAT methods. The uses of GDPs within the quick-start activities, tutorials, and code snippets as supporting tools, if viewed in isolation, can be seen as a triangular form of mediation involving subject, tool, and object mediation .
 
-![Figure 6.x - Diverse mediational strategies and complex object of activity  ](./Pictures/ch_6_at_dia_2.png){width=95%}
+<!-- The findings expose complex activity which presents challenges in terms of graphical representation using 3GAT methods. The uses of GDPs within the quick-start activities, tutorials, and code snippets as supporting tools, if viewed in isolation, can be seen as a triangular form of mediation involving subject, tool, and object mediation . -->
 
-While this diagram helps represent a general picture of the pattern mediation it may be too general to be useful. In particular, there is complexity in terms of the role of GDPs here which act sometimes as mediational strategies and at other times as motivational components of the object at hand. In addition, it fails to communicate interplay with community level of activity and wider systems.
+<!-- ![Figure 6.x - Diverse mediational strategies and complex object of activity  ](./Pictures/ch_6_at_dia_2.png){width=95%} -->
 
-Given the complexity of the expanded object and it would be unwieldy to try to represent in a 3GAT diagram form. As Engestrom noted in discussing challenges of representing new generations of AT, you can't keep adding triangles.
+Attempts to represent the variety of uses of GDPs within the technique of triangular visual representations would be problematic. In particular, the complexity in terms of the role of GDPs here which act sometimes as mediational strategies and at other times as motivational components of the object at hand would be difficult to communicate. Similarly, representation of the interplay of mediational strategies of tool use with the community level of activity and activity wider systems would also be challenging and unwieldy. As Engeström and Saninno [@engestrom_mediated_2021] note in discussing challenges of representing new generations of AT, you can't keep adding triangles.
 
-At the larger scale, (see Figure.5.x) the activity system of games code and process can be seen as a boundary objects. Additionally, each game instance, can also be interpreted as a boundary object for complex, and expanded interacting processes of activity. Take for example findings showing participant draw some of their home gaming knowledge of GDPs  in varied ways in the new setting including: goal formation, as a lingua franca in design processes, and to provide feedback in playtesting.
-
-PATCHED IN HERE - MERGE UP
-
-To end this section, it is of value to link this use of GDP terminology and visual prototyping techniques to existing research on the development of shared language to support joint work and guided participation. While much research on teaching coding addresses the benefits of collaborative approaches (see Chapter 2), fewer studies outline strategies to facilitate such joint attention [@brennan_scratch-ed_2009]. The work of Stahl and others [@stahl_computer-supported_2006] within the fields of technology use and collaborative learning is relevant here to highlight the importance of language development and the intersubjective interpretation of visual prototypes and gestures as tools in building mutual understanding in the kind of _joint problem space_ we see in this study. Returning to Kynigos's interpretation of the half-baked game as a boundary object facilitating communication [@kynigos_half-baked_2007], we can locate the diverse forms of GDPs as such _boundary objects_ at a scope of greater granularity.
+Both the wider object of activity represented at the community game making process and the narrower object of each game instance, can be interpreted as a boundary object for expanded, interacting processes of activity. Narrower still, returning to Kynigos's interpretation of the half-baked game as a boundary object facilitating communication [@kynigos_half-baked_2007], we GDP concept themselves can also been seen a _boundary objects_ at a greater level of granularity. The work of Stahl and others [@stahl_computer-supported_2006] within the fields of technology use and collaborative learning is relevant here to highlight the importance of language development and the intersubjective interpretation of visual prototypes and gestures as tools in building mutual understanding in the kind of _joint problem space_ we see in this study. While much research on teaching coding addresses the benefits of collaborative approaches (see Chapter 2), fewer studies outline strategies to facilitate such joint attention [@brennan_scratch-ed_2009]. Thus, it potentially fruitful to align relevant uses of GDPs outlined above to existing research on the development of shared language to support joint work and guided participation [@stahl_computer-supported_2006].  
 
 
 ### Discussion of GDPs not aligning with design cycles MERGE WITH BELOW?
@@ -867,7 +837,7 @@ The limitations here are on detail on how to enact identity formation via specif
 
 The work of the constructionist school is rich in a legacy of designing for fluency, notably including: software microworlds, affordance rich tools sets facilitating open-ended experimentations, accessible multi-media authoring software and community of Scratch. One idea which while present in part in online community of Scratch is that of constructopedia, an evolving resource of inspirational design elements, and accompanying instructions.
 
-In addition, while the concept flow is well established in socio-cultural research, the more specific concept of technological fluency are less explored. Given its wider scope within CHAT, in Chapter 7 characterics and processes associated with fluency in this chapter are analysed using the lens of agency, in particular that of relational agency.
+In addition, while the concept flow is well established in socio-cultural research, the more specific concept of technological fluency are less explored. Given its wider scope within CHAT, in Chapter 7 characteristics and processes associated with fluency in this chapter are analysed using the lens of agency, in particular that of relational agency.
 
 
 <!-- - as a means of identity formation in groups and collectives [@gee_chapter_2000]
@@ -886,16 +856,14 @@ To extend the concepts of designing for fluidity, it is of value to explore the 
 
 ## Conclusion
 
-On a theoretical plane, this chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared. CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies.
-
-On a cultural plane, using GDPs can aid the propagation of technical and social processes game making practices within an emerging community of learners. GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience.
+On a theoretical plane, this chapter has outlined the evolving use of GDPs as a meditational strategy to develop coding repertoires that are often shared. CHAT frames diverse use of shared resources and concepts, in this case GDPs, as meditational strategies. On a cultural plane, using GDPs can aid the propagation of technical and social processes game making practices within an emerging community of learners. GDPs served both researchers and participants by _providing a common language_ to clarify first learner expression and researcher's analysis of gameplay experience.
 
 The observations of this chapter show the diversity and flexibility of uses of GDP as an mediational tool.
 The next chapter builds on this to propose the potential of GDPs as a relatable navigational framework, occupying a the space between too concrete to be repeated and too theoretical to be grasped by novice game makers.
 
 The findings identified a complex object with a diversity of motivation which pose challenges in communicating in simple terms in terms of what characteristics we are designing learning environments to develop. The candidates of proximal flow and computational fluency were explored in relation to existing research and gaps were identified in there coverage of the importance of learning agency and identify formation.
 
-As such in the next chapter, this gap is addressed via the socio-cultural framing of learning.
+As such in the next chapter, this gap is addressed via STRONG LINKING MESSAGE HERE.
 
 <!-- In line with Sannino [@sannino_transformative_2022], this study frames such innovation within CHAT as transformational agency, a discussion of which forms a significant part of the following chapter. -->
 
